--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.2.1",
+    "web-vitals": "^2.1.4",
     "antd": "5.8.0",
-    "@ant-design/icons": "5.2.3",
-    "@types/react": "18.2.18",
-    "@types/react-dom": "18.2.7"
+    "@ant-design/icons": "latest",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "rc-util": "^5.32.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
