--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
   },
   "dependencies": {
     "antd": "^5.8.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.2.1"
   },
   "keywords": [],
   "author": "",
